Added manage responsible moderators functionality. Moderators can now be added as responsible persons to a channel. Moderator privileges on a channel can be revoked or granted again. Added methods addModeratorResponsibility, revokeModeratorResponsibility, getResponsibleModerators to ChannelAPI. Added actions LoadResponsibleModeratorsAction and ManageResponsibleModeratorsAction and implemented it. Removed SessionIsExpiredExcepion from retrieveLocale. Added mappings in RequestDispatcher and ActionFactory.  Slightly modified myChannels.jsp to provide buttons for functionality. Added manageChannelModerators screen and implemented it.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -96,7 +96,13 @@ general.message.error.requiresLogin = Sie müssen sich anmelden, um die gewünscht
 general.message.error.fatal = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
 general.message.error.notFound = Die angegebene Ressource konnte nicht gefunden werden.
 general.message.error.forbidden = Sie habe nicht die Berechtigung diese Aktion durchzuführen.
+general.message.error.channelNotFound = Der Kanal wurde nicht gefunden. Bitte laden Sie die Kanalressourcen neu. Es \
+  kann sein der Kanal wurde gelöscht und besitzt keine Repräsentation mehr auf dem Server.
+general.message.error.moderatorNotFound = Der angegebene Moderator konnte nicht gefunden werden.
+general.message.error.databaseFailure = Es ist ein Fehler beim Zugriff auf die Datenbank aufgetreten. Bitte versuchen\
+   Sie es erneut. Wenn der Fehler weiter besteht kontaktieren Sie bitte einen Administrator.
 general.alert.success = Erfolgreich!
+general.alert.success.info = Aktion erfolgreich ausgeführt.
 general.alert.failure = Fehlgeschlagen!
 general.confirmation.title = Sind Sie sicher?
 general.yes = Ja
@@ -105,6 +111,7 @@ general.term = Semester
 general.creationDate = Erstellungsdatum
 general.modificationDate = Änderungsdatum
 general.description = Beschreibung
+general.cancel = Abbrechen
 
 moderator.email = E-Mail
 moderator.name = Nutzername
@@ -151,7 +158,7 @@ myChannels.info = Auf dieser Seite sind alle Kanäle aufgelistet, für die Sie ver
 myChannels.list.heading = Kanäle
 myChannels.none = Keine
 myChannels.nodata = Keine Kanäle gefunden
-myChannels.nodata.into = Sie sind aktuell für keinen Kanal als Verantwortlicher eingetragen.
+myChannels.nodata.info = Sie sind aktuell für keinen Kanal als Verantwortlicher eingetragen.
 myChannel.panel.channelType = Kanaltyp
 myChannel.panel.locations = Orte
 myChannel.panel.dates = Termine
@@ -166,6 +173,47 @@ myChannel.panel.event.cost = Eintritt
 myChannel.panel.event.organizer = Veranstalter
 myChannel.panel.sports.cost = Kosten
 myChannel.panel.sports.numberOfParticipants = Anzahl Teilnehmer
+myChannels.button.alterChannelData = Kanaldaten bearbeiten
+myChannels.button.alterChannelModerators = Moderatoren verwalten
+myChannels.button.deleteChannel = Kanal löschen
+
+manageChannelModerators.title = Moderatoren verwalten
+manageChannelModerators.info = Diese Seite ermöglicht die Verwaltung der verantwortlichen Moderatoren eines Kanals. \
+  Moderatoren können zu den verantwortlichen Personen hinzugefügt oder davon entfernt werden.
+manageChannelModerators.info.selectedChannel = Die folgende Auflistung zeigt die verantwortlichen Moderatoren für den \
+   Kanal:
+manageChannelModerators.info.addModerator = Wollen Sie einen Moderator als verantwortliche Person zu diesem Kanal \
+  hinzufügen?
+manageChannelModerators.list.heading = Moderatoren
+manageChannelModerators.none = Keine Moderatoren
+manageChannelModerators.nodata = Keine Moderatoren gefunden
+manageChannelModerators.nodata.info = Liste enthält keine Daten zu Moderatoren
+manageChannelModerators.panel.firstName = Vorname
+manageChannelModerators.panel.lastName = Nachname
+manageChannelModerators.panel.email = Email
+manageChannelModerators.panel.active = Status
+manageChannelModerators.panel.active.true = Der Moderator ist aktiv für den Kanal verantwortlich.
+manageChannelModerators.panel.active.false = Der Moderator ist aktuell nicht mehr für den Kanal verantwortlich.
+manageChannelModerators.confirmation.reactivate = Wollen Sie den Status dieses Moderators wirklich wieder auf aktiv \
+  ändern? Der Moderator kann dann wieder aktiv Operationen auf dem Kanal ausführen.
+manageChannelModerators.confirmation.revoke = Wollen Sie dem Moderator wirklich die Rechte für diesen Kanal entziehen? \
+  Der Moderator kann dann keine Operationen mehr auf diesem Kanal ausführen.
+manageChannelModerators.confirmation.button.revoke = Entziehe Verwaltungsrechte
+manageChannelModerators.confirmation.button.reactivate = Reaktivieren
+manageChannelModerators.button.addModerator = Moderator hinzufügen
+manageChannelModerators.dialog.addModerator.title = Moderator zu Kanal hinzufügen
+manageChannelModerators.dialog.addModerator.description = Bitte geben Sie den Nutzernamen des Moderators an, der als \
+  Verantwortlicher dem Kanal hinzugefügt werden soll.
+manageChannelModerators.dialog.addModerator.inputfield.label = Nutzername Moderator
+manageChannelModerators.dialog.addModerator.inputfield.placeholder = Nutzername des Moderators eingeben
+manageChannelModerators.dialog.addModerator.submitButton.label = Moderator hinzufügen
+manageChannelModerators.moderatorForbidden.moderatorAmount = Ein Kanal muss mindestens einen aktiven Moderator \
+  besitzten. Gibt es nur noch einen aktiven Moderator, dann können diesem die Rechte nicht entzogen werden.
+manageChannelModerators.moderatorNotFound = Es scheint keinen Moderator mit dem von Ihnen angegebenen Namen zu geben.
+manageChannelModerators.channelNotFound = Der angegebene Kanal konnte auf dem Server nicht gefunden werden. Versuchen\
+   Sie die Kanäle neu zu laden und wiederholen Sie die Aktion im Anschluss.
+manageChannelModerators.channelDataIncomplete = Bitte geben Sie einen Namen für den Moderator an, der hinzugefügt \
+  werden soll.
 
 general.faculty.computerScienceAndEngineering = Fakultät für Ingenierwissenschaften, Informatik und Psychologie
 general.faculty.mathematicsAndEconomics = Fakultät für Mathematik und Wirtschaftswissenschaften
