Added delete channel functionality. Herefore added MyChannelsAction class and implemented Action interface. Added delete channel method in ChannelAPI. Changed scope of moderatorId variable in accounts.jso to request scope.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -176,6 +176,7 @@ myChannel.panel.sports.numberOfParticipants = Anzahl Teilnehmer
 myChannels.button.alterChannelData = Kanaldaten bearbeiten
 myChannels.button.alterChannelModerators = Moderatoren verwalten
 myChannels.button.deleteChannel = Kanal löschen
+myChannels.warning.delete = Wollen Sie den Kanal {0} wirklich unwiderruflich löschen?
 
 manageChannelModerators.title = Moderatoren verwalten
 manageChannelModerators.info = Diese Seite ermöglicht die Verwaltung der verantwortlichen Moderatoren eines Kanals. \
