Implemented functionality to show announcements and to create a new announcement in a channel. Added getAnnouncementsOfChannel and sendAnnouncement methods in ChannelAPI. Added actions loadChannelDetailsAction and SendAnnouncementAction and implemented them. Added channelDetails.jsp view and implemented it. Added constants, strings, references in ActionFactory and Dispatcher. Reference to new page from myChannels.jsp

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -178,6 +178,34 @@ myChannels.button.alterChannelModerators = Moderatoren verwalten
 myChannels.button.deleteChannel = Kanal löschen
 myChannels.warning.delete = Wollen Sie den Kanal {0} wirklich unwiderruflich löschen?
 
+channelDetails.title = Kanalinformationen
+channelDetails.info = Die Seite listet die Nachrichten auf, die bisher in den Kanal geschickt wurden. Neue \
+  Nachrichten können an die Abonnenten geschickt werden. Die Seite bietet zudem die Möglichkeit die Daten des Kanal \
+  zu bearbeiten.
+channelDetails.messages.panel.header = Benachrichtigungen
+channelDetails.details.panel.header = Kanalinformationen
+channelDetails.noAnnouncements = Es wurden noch keine Benachrichtigungen in diesem Kanal verschickt.
+channelDetails.button.newMessage = Neue Benachrichtigung
+channelDetails.dialog.newMessage.header = Neue Benachrichtigung senden
+channelDetails.dialog.newMessage.description = Bitte geben Sie die Nachricht ein, die Sie an die Abonnenten schicken \
+  wollen. Sie können die Priorität der Benachrichtigung angeben. Abhängig von der Priorität werden die Abonnenten \
+  möglicherweise anders über die eingegangene Benachrichtigung informiert.
+channelDetails.dialog.newMessage.textField.label = Nachrichteninhalt
+channelDetails.dialog.newMessage.textField.placeholder = Nachricht eingeben
+channelDetails.dialog.newMessage.priorityComboBox.label = Priorität
+channelDetails.dialog.newMessage.priorityComboBox.value.normal = Normal
+channelDetails.dialog.newMessage.priorityComboBox.value.high = Hoch
+channelDetails.dialog.newMessage.submitButton.label = Senden
+channelDetails.dialog.newMessage.title.textField.label = Titel
+channelDetails.dialog.newMessage.title.textField.placeholder = Titel eingeben
+channelDetails.dialog.newMessage.validation.announcementTitle.empty = Bitte geben Sie einen Titel für die \
+  Benachrichtigung ein.
+channelDetails.dialog.newMessage.validation.announcementText.empty = Bitte geben Sie eine Nachricht ein.
+channelDetails.dialog.newMessage.validation.announcementTitle.length = Der eingegebene Titel überschreitet die \
+  maximale Länge von 45 Zeichen.
+channelDetails.dialog.newMessage.validation.announcementText.length = Die eingegebene Nachricht überschreitet die \
+  maximale Länge von 500 Zeichen.
+
 manageChannelModerators.title = Moderatoren verwalten
 manageChannelModerators.info = Diese Seite ermöglicht die Verwaltung der verantwortlichen Moderatoren eines Kanals. \
   Moderatoren können zu den verantwortlichen Personen hinzugefügt oder davon entfernt werden.
@@ -215,6 +243,12 @@ manageChannelModerators.channelNotFound = Der angegebene Kanal konnte auf dem Se
    Sie die Kanäle neu zu laden und wiederholen Sie die Aktion im Anschluss.
 manageChannelModerators.channelDataIncomplete = Bitte geben Sie einen Namen für den Moderator an, der hinzugefügt \
   werden soll.
+channelDetails.createAnnouncement.error.generalValidationError = Request wurde vom Server abgelehnt. Bitte prüfen Sie\
+   alle Ihre Eingaben.
+channelDetails.createAnnouncement.error.titleInvalid = Request wurde vom Server abgelehnt. Bitte prüfen Sie den \
+   eingegebenen Titel.
+channelDetails.createAnnouncement.error.textInvalid = Request wurde vom Server abgelehnt. Bitte prüfen Sie den \
+   eingegebenen Text.
 
 general.faculty.computerScienceAndEngineering = Fakultät für Ingenierwissenschaften, Informatik und Psychologie
 general.faculty.mathematicsAndEconomics = Fakultät für Mathematik und Wirtschaftswissenschaften
