--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -176,6 +176,7 @@ myChannel.panel.sports.numberOfParticipants = Anzahl Teilnehmer
 myChannels.button.alterChannelData = Kanaldaten bearbeiten
 myChannels.button.alterChannelModerators = Moderatoren verwalten
 myChannels.button.deleteChannel = Kanal löschen
+myChannels.button.announcements = Benachrichtigungen
 myChannels.warning.delete = Wollen Sie den Kanal {0} wirklich unwiderruflich löschen?
 
 channelDetails.title = Kanalinformationen
