Started to implement edit channel details functionality. Adapted the channelDetails page. Added the LoadChannelDetailsAction class and started to implement it. Implemented the getChannel method in the channelAPI. Added mappings to the request dispatcher and action factory.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -159,6 +159,7 @@ myChannels.list.heading = Kanäle
 myChannels.none = Keine
 myChannels.nodata = Keine Kanäle gefunden
 myChannels.nodata.info = Sie sind aktuell für keinen Kanal als Verantwortlicher eingetragen.
+myChannel.panel.channelName = Kanalname
 myChannel.panel.channelType = Kanaltyp
 myChannel.panel.locations = Orte
 myChannel.panel.dates = Termine
@@ -206,6 +207,10 @@ announcements.dialog.newMessage.validation.announcementTitle.length = Der eingeg
   maximale Länge von 45 Zeichen.
 announcements.dialog.newMessage.validation.announcementText.length = Die eingegebene Nachricht überschreitet die \
   maximale Länge von 500 Zeichen.
+
+channelDetails.title = Kanaldetails
+channelDetails.info = Hier können Sie die Daten des Kanals ändern. Bitte füllen Sie alle Pflichtfelder aus.
+channelDetails.submitButton.label = Speichere Änderungen
 
 manageChannelModerators.title = Moderatoren verwalten
 manageChannelModerators.info = Diese Seite ermöglicht die Verwaltung der verantwortlichen Moderatoren eines Kanals. \
@@ -261,6 +266,9 @@ general.channelType.event = Veranstaltung
 general.channelType.sports = Sportgruppe
 general.channelType.other = Andere
 general.channelType.studentGroup = Studentengruppe
+
+general.term.summer = Sommer
+general.term.winter = Winter
 
 groups.title = Gruppen
 groups.info = Auf dieser Seite sind alle Gruppen des Systems aufgelistet. Die Gruppen sind absteigend nach \
