My account functionality implemented. Edit my account implemented (fist name, last name, email). Actions created. Texts updated.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -112,6 +112,7 @@ general.creationDate = Erstellungsdatum
 general.modificationDate = Änderungsdatum
 general.description = Beschreibung
 general.cancel = Abbrechen
+general.edit = Bearbeiten
 
 moderator.email = E-Mail
 moderator.name = Nutzername
@@ -285,3 +286,17 @@ group.type.tutorial = Tutorium
 group.type.working = Arbeitsgruppe
 group.admin = Gruppenadministrator
 group.notfound = Die angegebene Gruppe konnte nicht gefunden werden.
+
+myAccount.title = Mein Account
+myAccount.info = Diese Seite zeigt Ihre Accountdaten. Hier können Sie Ihren Account löschen oder Ihre Accountdaten \
+  ändern indem Sie auf den entsprechenden Button klicken.
+myAccount.warning.delete = Ein gelöschter Account kann nicht wiederhergestellt werden!
+myAccount.nodata = Keine Accountdaten gefunden
+myAccount.nodata.info = Ihre Accountdaten konnten im System nicht gefunden werden.
+myAccount.delete.success = Ihr Account wurde gelöscht.
+myAccount.edit.success = Ihr Account wurde aktualisiert.
+myAccount.edit.notEdited = Keine Änderungen festgestellt. Ihr Account wurde nicht aktualisiert.
+
+myAccountEdit.title = Account bearbeiten
+myAccountEdit.info = Hier können Sie Ihren Account aktualisieren und die Änderungen mit einem Klick auf den \
+  Bearbeiten-Button bestätigen.
