Continued to implement edit channel functionality. Added EditChannelAction and implemented it. Implementation is nearly done. Validation of subclass data fields is still missing. Added updateChannel functionality to ChannelAPI.  Handled error case in LoadChannelDetailsAction. Switched to UTF-8 encoding in requestcontextmanager due to encoding problems (string comparisons failed due to encoding problems). Changed a lot of view related stuff in channelDetails.jsp. Added entries to request dispatcher and action factory.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -98,12 +98,15 @@ general.message.error.notFound = Die angegebene Ressource konnte nicht gefunden 
 general.message.error.forbidden = Sie habe nicht die Berechtigung diese Aktion durchzuführen.
 general.message.error.channelNotFound = Der Kanal wurde nicht gefunden. Bitte laden Sie die Kanalressourcen neu. Es \
   kann sein der Kanal wurde gelöscht und besitzt keine Repräsentation mehr auf dem Server.
+general.message.error.channelDataIncomplete = Es fehlen Daten, die für die Aktion auf dem Kanal notwendig sind. Bitte\
+   prüfen Sie Ihre Eingaben.
 general.message.error.moderatorNotFound = Der angegebene Moderator konnte nicht gefunden werden.
 general.message.error.databaseFailure = Es ist ein Fehler beim Zugriff auf die Datenbank aufgetreten. Bitte versuchen\
    Sie es erneut. Wenn der Fehler weiter besteht kontaktieren Sie bitte einen Administrator.
 general.alert.success = Erfolgreich!
 general.alert.success.info = Aktion erfolgreich ausgeführt.
 general.alert.failure = Fehlgeschlagen!
+general.alert.warning = Warnung!
 general.confirmation.title = Sind Sie sicher?
 general.yes = Ja
 general.no = Nein
@@ -212,6 +215,27 @@ announcements.dialog.newMessage.validation.announcementText.length = Die eingege
 channelDetails.title = Kanaldetails
 channelDetails.info = Hier können Sie die Daten des Kanals ändern. Bitte füllen Sie alle Pflichtfelder aus.
 channelDetails.submitButton.label = Speichere Änderungen
+channelDetails.noChannelData.warning = Es konnten keine Daten für den Kanal geladen werden. Bitte versuchen Sie es \
+  erneut.
+channelDetails.noUpdate.warning = Es wurden keine Daten geändert. Keine Aktualisierung erforderlich.
+
+channel.form.validationError.missingName = Bitte geben Sie einen Kanalnamen an.
+channel.form.validationError.missingTerm = Bitte geben Sie ein gültiges Semester an.
+channel.form.validationError.missingContacts = Bitte geben Sie Kontaktinformationen an.
+channel.form.validationError.invalidName = Der eingegebene Name ist ungültig. Bitte stellen Sie sicher, dass der \
+  Kanalname mindestens 3 und maximal 45 Zeichen umfasst. Bitte beachten Sie auch, dass auch bestimmte Sonderzeichen im \
+  Namen nicht erlaubt sind.
+channel.form.validationError.invalidTerm = Das Semester wurde nicht im erwarteten Format bereitgestellt.
+channel.form.validationError.invalidContacts = Die Kontaktinformationen überschreiten die maximale Länge von 120 \
+  Zeichen.
+channel.form.validationError.invalidDescription = Die angegebene Beschreibung überschreitet die maximale Länge von \
+  500 Zeichen.
+channel.form.validationError.invalidLocations = The Angaben über den Ort überschreiten die maximale Länge von 120 \
+  Zeichen.
+channel.form.validationError.invalidDates = The Angaben über die Termine überschreiten die maximale Länge von 150 \
+  Zeichen.
+channel.form.validationError.invalidWebsite = The Angaben über die Webseite überschreiten die maximale Länge von 500 \
+Zeichen.
 
 manageChannelModerators.title = Moderatoren verwalten
 manageChannelModerators.info = Diese Seite ermöglicht die Verwaltung der verantwortlichen Moderatoren eines Kanals. \
