Change moderator password functionality implemented. Moved hashPassword() method to ModeratorUtil.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -324,3 +324,24 @@ myAccount.edit.notEdited = Keine Änderungen festgestellt. Ihr Account wurde nich
 myAccountEdit.title = Account bearbeiten
 myAccountEdit.info = Hier können Sie Ihren Account aktualisieren und die Änderungen mit einem Klick auf den \
   Bearbeiten-Button bestätigen.
+myAccountEdit.password.title = Passwort ändern
+myAccountEdit.password.info = Klicken Sie auf den Button unten um Ihr Passwort zu ändern. Sie müssen Ihr aktuelles \
+  Passwort und das neue Passwort eingeben sowie das neue Passwort wiederholen.
+myAccountEdit.password.change = Passwort ändern
+myAccountEdit.password.dialog.header = Passwort ändern
+myAccountEdit.password.dialog.description = Hier können Sie Ihr Passwort ändern. Sie müssen Ihr aktuelles Passwort \
+  und das neue Passwort eingeben sowie das neue Passwort wiederholen.
+myAccountEdit.password.dialog.current = Aktuelles Passwort
+myAccountEdit.password.dialog.current.placeholder = Aktuelles Passwort eingeben
+myAccountEdit.password.dialog.current.validation.empty = Bitte geben Sie Ihr aktuelles Passwort ein.
+myAccountEdit.password.dialog.new = Neues Passwort
+myAccountEdit.password.dialog.new.placeholder = Neues Passwort eingeben
+myAccountEdit.password.dialog.new.validation.empty = Bitte geben Sie ein neues Passwort ein.
+myAccountEdit.password.dialog.newAgain = Neues Passwort wiederholen
+myAccountEdit.password.dialog.newAgain.placeholder = Neues Passwort erneut eingeben
+myAccountEdit.password.dialog.newAgain.validation.empty = Bitte geben Sie das neue Passwort erneut ein.
+myAccountEdit.password.dialog.newAgain.validation.mismatch = Die Eingaben für das neue Passwort in beiden Textfeldern \
+  stimmen nicht überein.
+myAccountEdit.password.dialog.unauthorized = Ihre Eingabe für das aktuelle Passwort ist nicht korrekt.
+myAccountEdit.password.change.submit = Ändern
+myAccountEdit.password.successful = Ihr Passwort wurde erfolgreich geändert.
