Added validation of subclass data fields in edit channel action.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -236,6 +236,20 @@ channel.form.validationError.invalidDates = The Angaben über die Termine übersch
   Zeichen.
 channel.form.validationError.invalidWebsite = The Angaben über die Webseite überschreiten die maximale Länge von 500 \
 Zeichen.
+channel.form.validationError.invalidLecturer = Die Angaben über den Dozenten überschreiten die maximale Länge von 120\
+   Zeichen.
+channel.form.validationError.invalidAssistant = Die Angaben über den Übungsleiter überschreiten die maximale Länge \
+  von 120 Zeichen.
+channel.form.validationError.invalidStartDate = Die Angaben über den Vorlesungsbeginn überschreiten die maximale \
+  Länge von 45 Zeichen.
+channel.form.validationError.invalidEndDate = Die Angaben über das Vorlesungsende überschreiten die maximale Länge \
+  von 45 Zeichen.
+channel.form.validationError.invalidCost = Die Angaben über die Kosten überschreiten die maximale Länge \
+  von 150 Zeichen.
+channel.form.validationError.invalidOrganizer = Die Angaben über den Veranstalter überschreiten die maximale Länge \
+  von 120 Zeichen.
+channel.form.validationError.invalidNrOfParticipants = Die Angaben über die Anzahl an Teilnehmern überschreiten die \
+  maximale Länge von 150 Zeichen.
 
 manageChannelModerators.title = Moderatoren verwalten
 manageChannelModerators.info = Diese Seite ermöglicht die Verwaltung der verantwortlichen Moderatoren eines Kanals. \
