Modified previous EditChannelAction so that it supports edit and creation process of channels. Implemented the create channel functionality. Added createChannel method in ChannelAPI. Added LoadCreateChannelDialogAction. Added view createChannel.jsp. Added the "create channel" button, etc. in myChannels.jsp. Added some missing labels and performed minor changes on channelDetails.jsp. Adjusted the mappings in RequestDispatcher, ActionFactory and Constants.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -165,12 +165,13 @@ myChannels.nodata = Keine Kanäle gefunden
 myChannels.nodata.info = Sie sind aktuell für keinen Kanal als Verantwortlicher eingetragen.
 myChannel.panel.channelName = Kanalname
 myChannel.panel.channelType = Kanaltyp
+myChannel.panel.term.year = Jahr
 myChannel.panel.locations = Orte
 myChannel.panel.dates = Termine
 myChannel.panel.contactInformation = Kontakt
 myChannel.panel.website = Webseite
 myChannel.panel.lecture.lecturer = Dozent
-myChannel.panel.lecture.assistant = Übungsleiter/Assistenten
+myChannel.panel.lecture.assistant = Übungsleiter
 myChannel.panel.lecture.startDate = Vorlesungsbeginn
 myChannel.panel.lecture.endDate = Vorlesungsende
 myChannel.panel.lecture.faculty = Fakultät
@@ -183,6 +184,8 @@ myChannels.button.alterChannelModerators = Moderatoren verwalten
 myChannels.button.deleteChannel = Kanal löschen
 myChannels.button.announcements = Benachrichtigungen
 myChannels.warning.delete = Wollen Sie den Kanal {0} wirklich unwiderruflich löschen?
+myChannels.createChannel.description = Wollen Sie einen neuen Kanal anlegen?
+myChannels.button.createChannel = Kanal anlegen
 
 announcements.title = Kanalinformationen
 announcements.info = Die Seite listet die Nachrichten auf, die bisher in den Kanal geschickt wurden. Neue \
@@ -230,11 +233,11 @@ channel.form.validationError.invalidContacts = Die Kontaktinformationen überschr
   Zeichen.
 channel.form.validationError.invalidDescription = Die angegebene Beschreibung überschreitet die maximale Länge von \
   500 Zeichen.
-channel.form.validationError.invalidLocations = The Angaben über den Ort überschreiten die maximale Länge von 120 \
+channel.form.validationError.invalidLocations = Die Angaben über den Ort überschreiten die maximale Länge von 120 \
   Zeichen.
-channel.form.validationError.invalidDates = The Angaben über die Termine überschreiten die maximale Länge von 150 \
+channel.form.validationError.invalidDates = Die Angaben über die Termine überschreiten die maximale Länge von 150 \
   Zeichen.
-channel.form.validationError.invalidWebsite = The Angaben über die Webseite überschreiten die maximale Länge von 500 \
+channel.form.validationError.invalidWebsite = Die Angaben über die Webseite überschreiten die maximale Länge von 500 \
 Zeichen.
 channel.form.validationError.invalidLecturer = Die Angaben über den Dozenten überschreiten die maximale Länge von 120\
    Zeichen.
@@ -250,6 +253,18 @@ channel.form.validationError.invalidOrganizer = Die Angaben über den Veranstalte
   von 120 Zeichen.
 channel.form.validationError.invalidNrOfParticipants = Die Angaben über die Anzahl an Teilnehmern überschreiten die \
   maximale Länge von 150 Zeichen.
+channel.form.validationError.channelNameAlreadyExists = Es gibt bereits einen Kanal mit diesem Namen im System. Ein \
+  Kanalname sollte systemweit eindeutig sein, um einen Kanal eindeutig zu identifzieren. Bitte wählen Sie einen \
+  anderen Namen.
+channel.form.validationError.generalValidationError = Der Request wurde vom Server abgelehnt. Bitte prüfen Sie Ihre \
+  Eingaben.
+
+createChannel.title = Erstelle Kanal
+createChannel.info = Auf dieser Seite können Sie einen neuen Kanal anlegen. Bitte geben Sie die hierfür notwendigen \
+  Daten an.
+createChannel.submitButton.label = Kanal anlegen
+createChannel.creation.loadingFailed = Ein Fehler ist beim Laden des Erstellungsdialog aufgetreten. Bitte versuchen \
+  Sie es erneut.
 
 manageChannelModerators.title = Moderatoren verwalten
 manageChannelModerators.info = Diese Seite ermöglicht die Verwaltung der verantwortlichen Moderatoren eines Kanals. \
