Added functionality to display all channels as an administrator. Implemented methods for getAllChannels in ChannelAPI. Renamed the action MyChannelsAction to DeleteChannelAction. This name is better since it realizes just the delete functionality. Added action LoadAllChannelsAction and implemented it. Added view channels.jsp. Updated constants, action factory, and request dispatcher.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -266,6 +266,16 @@ createChannel.submitButton.label = Kanal anlegen
 createChannel.creation.loadingFailed = Ein Fehler ist beim Laden des Erstellungsdialog aufgetreten. Bitte versuchen \
   Sie es erneut.
 
+allChannels.title = Kanäle
+allChannels.info = Diese Seite listet alle im System vorhandenen Kanäle. Es erlaubt die Kanäle und ihre zugehörigen \
+  Daten zu prüfen. Verstoßen Kanäle gegen bestimmte Regeln, dann können sie entfernt werden.
+allChannels.list.heading = Alle Kanäle
+allChannels.none = Es gibt noch keine Kanäle im System.
+allChannels.nodata = Kein Kanäle
+allChannels.nodata.info = Kein Kanal ausgewählt.
+allChannels.button.deleteChannel = Lösche Kanal
+allChannels.warning.delete = Wollen Sie den Kanal {0} wirklich unwiderruflich löschen?
+
 manageChannelModerators.title = Moderatoren verwalten
 manageChannelModerators.info = Diese Seite ermöglicht die Verwaltung der verantwortlichen Moderatoren eines Kanals. \
   Moderatoren können zu den verantwortlichen Personen hinzugefügt oder davon entfernt werden.
