Load and display reminder details for a specific channel implemented.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -183,6 +183,7 @@ myChannels.button.alterChannelData = Kanaldaten bearbeiten
 myChannels.button.alterChannelModerators = Moderatoren verwalten
 myChannels.button.deleteChannel = Kanal löschen
 myChannels.button.announcements = Benachrichtigungen
+myChannels.button.reminders = Reminder
 myChannels.warning.delete = Wollen Sie den Kanal {0} wirklich unwiderruflich löschen?
 myChannels.createChannel.description = Wollen Sie einen neuen Kanal anlegen?
 myChannels.button.createChannel = Kanal anlegen
@@ -384,3 +385,29 @@ myAccountEdit.password.dialog.newAgain.validation.mismatch = Die Eingaben für da
 myAccountEdit.password.dialog.unauthorized = Ihre Eingabe für das aktuelle Passwort ist nicht korrekt.
 myAccountEdit.password.change.submit = Ändern
 myAccountEdit.password.successful = Ihr Passwort wurde erfolgreich geändert.
+
+reminders.title = Reminder
+reminders.info = Hier werden alle Reminder des ausgewählten Kanals aufgelistet. Hier können Sie die Details zu den \
+  Remindern einsehen und bearbeiten. Außerdem können Sie neue Reminder anlegen und bestehende Reminder löschen.
+reminders.warning.delete = Gelöschte Reminder können nicht wiederhergestellt werden!
+reminders.list.heading = Reminder
+reminders.nodata = Keine Reminder gefunden
+reminders.nodata.info = In diesem Kanal gibt es keine Reminder.
+reminders.delete.success = Der Reminder {0} wurde gelöscht.
+
+reminder.title = Title
+reminder.text = Text
+reminder.startDate = Startdatum
+reminder.endDate = Enddatum
+reminder.nextDate = Nächste Remindernachricht
+reminder.expired = Der Reminder ist abgelaufen.
+reminder.priority = Priorität
+reminder.priority.high = Hoch
+reminder.priority.normal = Normal
+reminder.interval = Intervall
+reminder.interval.daily = Sende Reminder täglich.
+reminder.interval.xDays = Sende Reminder jeden {0}. Tag.
+reminder.interval.weekly = Sende Reminder wöchentlich.
+reminder.interval.xWeeks = Sende Reminder jede {0}. Woche.
+reminder.interval.once = Sende Reminder einmalig.
+reminder.interval.invalid = Das Reminderinterval ist ungültig.
