Delete reminder implemented.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -343,7 +343,7 @@ groups.warning.delete = Gelöschte Gruppen können nicht wiederhergestellt werden!
 groups.list.heading = Gruppen
 groups.nodata = Keine Gruppen gefunden
 groups.nodata.info = Es gibt keine Gruppen im System.
-groups.delete.success = Die Gruppe {0} wurde gelöscht.
+groups.delete.success = Die Gruppe "{0}" wurde gelöscht.
 
 group.type = Gruppentyp
 group.type.tutorial = Tutorium
@@ -393,7 +393,7 @@ reminders.warning.delete = Gelöschte Reminder können nicht wiederhergestellt wer
 reminders.list.heading = Reminder
 reminders.nodata = Keine Reminder gefunden
 reminders.nodata.info = In diesem Kanal gibt es keine Reminder.
-reminders.delete.success = Der Reminder {0} wurde gelöscht.
+reminders.delete.success = Der Reminder "{0}" wurde gelöscht.
 
 reminder.title = Title
 reminder.text = Text
@@ -411,3 +411,4 @@ reminder.interval.weekly = Sende Reminder wöchentlich.
 reminder.interval.xWeeks = Sende Reminder jede {0}. Woche.
 reminder.interval.once = Sende Reminder einmalig.
 reminder.interval.invalid = Das Reminderinterval ist ungültig.
+reminder.notfound = Die angegebene Reminderressource konnte nicht gefunden werden.
