Changed panel width in announcements to full width. Removed spaces in textarea for message text. Changed button labels for Edit and Delete in myChannels.jsp

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -179,9 +179,9 @@ myChannel.panel.event.cost = Eintritt
 myChannel.panel.event.organizer = Veranstalter
 myChannel.panel.sports.cost = Kosten
 myChannel.panel.sports.numberOfParticipants = Anzahl Teilnehmer
-myChannels.button.alterChannelData = Kanaldaten bearbeiten
+myChannels.button.alterChannelData = Bearbeiten
 myChannels.button.alterChannelModerators = Moderatoren verwalten
-myChannels.button.deleteChannel = Kanal löschen
+myChannels.button.deleteChannel = Löschen
 myChannels.button.announcements = Benachrichtigungen
 myChannels.button.reminders = Reminder
 myChannels.warning.delete = Wollen Sie den Kanal {0} wirklich unwiderruflich löschen?
