--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -185,8 +185,8 @@ myChannels.button.deleteChannel = Löschen
 myChannels.button.announcements = Benachrichtigungen
 myChannels.button.reminders = Reminder
 myChannels.warning.delete = Wollen Sie den Kanal {0} wirklich unwiderruflich löschen?
-myChannels.createChannel.description = Wollen Sie einen neuen Kanal anlegen?
-myChannels.button.createChannel = Kanal anlegen
+myChannels.createChannel.description = Möchten Sie einen neuen Kanal anlegen?
+myChannels.button.createChannel = Kanal erstellen
 
 announcements.title = Kanalinformationen
 announcements.info = Die Seite listet die Nachrichten auf, die bisher in den Kanal geschickt wurden. Neue \
@@ -394,6 +394,8 @@ reminders.list.heading = Reminder
 reminders.nodata = Keine Reminder gefunden
 reminders.nodata.info = In diesem Kanal gibt es keine Reminder.
 reminders.delete.success = Der Reminder "{0}" wurde gelöscht.
+reminders.create.text = Möchten Sie einen neuen Reminder anlegen?
+reminders.create.button = Reminder erstellen
 
 reminder.title = Title
 reminder.text = Text
