Adjusted page layouts. Adjusted form layout in channelDetails. Adjusted buttons. The same was done in createChannels.jsp Small changes in managechannelModerators: Changed button positions. Adjusted layout of passwordReset and register in order to be consistent with the other pages.
Added check for empty input in ResetPasswordAction.
Added handling of EmailFailure in RegisterAction.
Set lecture as a mandatory field and added the validation rule in CreateOrEditChannelAction.

Added some string resources.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -38,6 +38,7 @@ resetPassword.description = Wenn Sie Ihr Passwort vergessen haben können Sie es 
   das zurückgesetzte Passwort sobald wie möglich.
 resetPassword.resetButton.label = Passwort zurücksetzen
 resetPassword.failure.accountNotFound = Es ist kein Account diesem Nutzernamen zugeordnet.
+resetPassword.failure.noAccountName = Bitte geben Sie den Nutzernamen eines Accounts an.
 resetPassword.form.label.name.desc = Nutzernamen eingeben
 resetPassword.info.success = Passwort erfolgreich zurückgesetzt. Ihr neues Passwort wurde per Mail versandt.
 resetPassword.info.failure = Passwort konnte nicht zurückgesetzt werden.
@@ -86,6 +87,9 @@ register.form.validationError.missingMotivation = Bitte geben Sie Ihre Motivatio
 register.form.validationError.general.rejected = Abgelehnt vom Server. Bitte prüfen Sie Ihre Eingabe nochmals.
 register.info.connectionFailure = Der Account konnte nicht angelegt werden, da der Server nicht erreicht werden \
   konnte. Der Server ist möglicherweise gerade offline. Bitte versuchen Sie es später nochmals.
+register.info.emailFailure = Der Accountantrag wurde erfogreich empfangen und gespeichert. Der Server konnte \
+  allerdings keine Bestätigungsemail an die angegebene Adresse senden. Bitte prüfen Sie, ob die Adresse richtig \
+  angegeben ist.
 
 general.message.error.connectionFailure = Die Anfrage ist fehlgeschlagen, da der Server nicht erreicht werden konnte.\
    Bitte versuchen Sie es später nochmal.
@@ -217,7 +221,9 @@ announcements.dialog.newMessage.validation.announcementText.length = Die eingege
   maximale Länge von 500 Zeichen.
 
 channelDetails.title = Kanaldetails
-channelDetails.info = Hier können Sie die Daten des Kanals ändern. Bitte füllen Sie alle Pflichtfelder aus.
+channelDetails.info = Hier können Sie die Daten des Kanals ändern. Bitte achten Sie darauf, dass auch bei Änderungen \
+  alle Pflichtfelder ausgefüllt sind. Pflichtfelder sind mit einem * markiert. Sie können den Typ eines Kanals nicht \
+  ändern. Wenn Sie einen Kanal eines anderen Typs wollen, dann müssen Sie einen neuen Kanal anlegen.
 channelDetails.submitButton.label = Speichere Änderungen
 channelDetails.noChannelData.warning = Es konnten keine Daten für den Kanal geladen werden. Bitte versuchen Sie es \
   erneut.
@@ -242,6 +248,7 @@ channel.form.validationError.invalidWebsite = Die Angaben über die Webseite über
 Zeichen.
 channel.form.validationError.invalidLecturer = Die Angaben über den Dozenten überschreiten die maximale Länge von 120\
    Zeichen.
+channel.form.validationError.missingLecturer = Bitte geben Sie Informationen über den Dozent der Vorlesung an.
 channel.form.validationError.invalidAssistant = Die Angaben über den Übungsleiter überschreiten die maximale Länge \
   von 120 Zeichen.
 channel.form.validationError.invalidStartDate = Die Angaben über den Vorlesungsbeginn überschreiten die maximale \
@@ -262,7 +269,8 @@ channel.form.validationError.generalValidationError = Der Request wurde vom Serv
 
 createChannel.title = Erstelle Kanal
 createChannel.info = Auf dieser Seite können Sie einen neuen Kanal anlegen. Bitte geben Sie die hierfür notwendigen \
-  Daten an.
+  Daten an. Sie können aus verschiedenen zur Verfügung stehenden Kanaltypen wählen. Je nach Kanaltyp können \
+  zusätzliche Datenfelder hinzukommen. Die mit einem * markierten Datenfelder sind Pflichtfelder.
 createChannel.submitButton.label = Kanal anlegen
 createChannel.creation.loadingFailed = Ein Fehler ist beim Laden des Erstellungsdialog aufgetreten. Bitte versuchen \
   Sie es erneut.
