Edit reminder button added. Index page updated. Login page updated.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -12,11 +12,32 @@ header.nav.label.myAccount = Mein Account
 
 index.welcome = Willkommen zum University News Ulm Web Client!
 index.text.app = Die University News Ulm App ist verfügbar für Android and Windows Phone.
-index.text.app.android = Lade die Android App vom Google Play Store.
+index.text.app.android = Laden Sie die Android App vom Google Play Store. Die App steht Ihnen in Kürze zur Verfügung.
 index.button.app.android = Android App herunterladen
-index.text.app.windowsPhone = Lade die Windows Phone App vom Windows Store.
+index.text.app.windowsPhone = Laden Sie die Windows Phone App vom Windows Store. Die App steht Ihnen in Kürze zur \
+  Verfügung.
 index.button.app.windowsPhone = Windows Phone App herunterladen
 index.text.loggedIn = Sie sind eingeloggt als:
+index.about.title = Was ist University News Ulm?
+index.about.text1 = University News Ulm (UNU) ist ein Projekt das im Rahmen des Anwendungsfachs Advanced Mobile \
+  Application Engineering am Institut für Datenbanken und Informationssysteme an der Universität Ulm entstanden ist.
+index.about.text2 = Die Grundaufgabe von UNU ist es, Informationen zu einem bestimmten Thema zu verbreiten. Dazu \
+  sollen unterschiedliche Kanäle, die über unterschiedliche Themen benachrichtigen, abonniert werden können. \
+  Ein solcher Kanal kann zum Beispiel über Neuigkeiten wie eine Raumänderung einer Vorlesung benachrichtigen oder an \
+  Bevorstehendes wie den VVK einer Uniparty erinnern.
+index.about.text3 = Der Web Client dient der Administration und Verwaltung von Kanälen. Die Moderatoren eines Kanals \
+  können so z. B. neue Kanalnachrichten erstellen. Mit Hilfe der Apps können die Endnutzern (Studenten) Kanäle \
+  abonnieren und Nachrichten empfangen. Moderatoren haben die Möglichkeit Kanäle auch mit Hilfe der App zu verwalten.
+index.about.text4 = Des Weiteren ermöglichen die Apps die Erstellung von verschiedenen Gruppen. Grundfunktion einer \
+  Gruppe ist es, einen in sich geschlossenen Bereich zu schaffen, in dem sich die Mitglieder dieser Gruppe \
+  austauschen und organisieren können. Innerhalb von Gruppen soll es möglich sein zu chatten, Konversationen über \
+  bestimmten Themen zu erstellen und Abstimmungen durchzuführen.
+index.about.text5 = Das UNU-System besteht aus diesem Web Client, einem dazugehörigen REST Server sowie einer Android \
+  und einer Windows Phone App. Alle diese Komponenten wurden von Matthias Mak und Philipp Speidel entwickelt. Betreuer \
+  des Projekts ist Marc Schickler.
+index.about.text6 = Diese Software wird ohne jegliche spezielle oder implizierte Garantien zur Verfügung \
+  gestellt. Bei Fragen oder Verbesserungsvorschlägen wenden Sie sich bitte an
+
 
 login.label.heading = Bitte einloggen
 login.label.username = Nutzername
